# audit-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GETTING_STARTED.md  INTEGRATION.md  PROTOCOL.md  WEB_RESEARCH_2026-04-17_AUDIT_AGENT_EVOLUTION.md
src/: __init__.py
src/audit_agent/: PROMPT.md  __init__.py
src/audit_agent/cli/: __init__.py  main.py
src/audit_agent/core/: __init__.py  audit_agent.py  audit_config.py  audit_result.py  audit_runner.py  delta_audit.py  evals.py  evidence.py  plan_runner.py  specialist_audits.py
src/audit_agent/integration/: __init__.py  effort_agent_bridge.py  forgegod_integration.py  mcp_server.py  taste_agent_bridge.py
src/audit_agent/renderers/: __init__.py  json_block.py  markdown.py
src/audit_agent/scanners/: __init__.py  architecture.py  dependencies.py  effort_requirements.py  entry_points.py  health.py  planning_constraints.py  repo_snapshot.py  risk_map.py  security.py  taste_preflight.py  test_surface.py
tests/: __init__.py  conftest.py  test_audit_agent.py  test_audit_config.py  test_audit_result.py  test_audit_runner_hybrid.py  test_delta_audit.py  test_evals.py  test_evidence.py  test_plan_result.py  test_plan_runner.py  test_scanner_repo_snapshot.py  test_specialist_audits.py
