[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"

[project]
name = "audit-agent"
version = "0.3.0"
description = "Audit + Plan for AI coding agents — produces AUDIT.md and PLAN.md via audit-informed story decomposition"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "ForgeGod Contributors"}]
keywords = ["ai", "coding", "agent", "forgegod", "audit", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "typer[all]>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "ruff>=0.11"]

[project.scripts]
audit = "audit_agent.cli.main:app"

[tool.hatch.build]
exclude = [
    ".forgegod/**",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audit_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
